--- a/basant.css
+++ b/basant.css
@@ -80,7 +80,7 @@ body{
         background-color: white ;
     }
     .navbar.navbar-expand-lg{
-        background-color: #F7F9FE ;
+        background-color: red ;
         width: 50%;
     }
 
