--- a/basant.css
+++ b/basant.css
@@ -80,8 +80,8 @@ body{
         background-color: white ;
     }
     .navbar.navbar-expand-lg{
-        background-color: red ;
-        width: 50%;
+        background-color:  #F7F9FE;
+        width: 80%;
     }
 
     
