--- a/basant.css
+++ b/basant.css
@@ -5,7 +5,8 @@
 }
 
 body{
-    background-color: rgb(248, 248, 248) !important;   
+    background-color: rgb(248, 248, 248) !important; 
+    overflow-x:hidden 
 }
 
 /**nav**/
